--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-masked-view/masked-view": "0.3.0",
+    "@react-navigation/native": "^6.1.15",
+    "@react-navigation/native-stack": "^6.9.24",
+    "@react-navigation/stack": "^6.3.27",
     "expo": "~50.0.11",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-bluetooth-escpos-printer": "^0.0.5",
-    "react-native-permissions": "^4.1.4"
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-permissions": "^4.1.4",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
