--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-view-shot": "^3.8.0",
     "react-native-webview": "^13.8.1"
   },
   "devDependencies": {
