--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-masked-view/masked-view": "0.3.0",
-    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/drawer": "^6.6.14",
     "@react-navigation/native": "^6.1.15",
     "@react-navigation/native-stack": "^6.9.24",
     "@react-navigation/stack": "^6.3.27",
-    "@shopify/react-native-skia": "^1.0.3",
     "axios": "^1.6.7",
     "expo": "~50.0.11",
     "expo-status-bar": "~1.11.1",
@@ -33,9 +31,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^14.1.0",
-    "react-native-view-shot": "^3.8.0",
-    "react-native-webview": "^13.8.1"
+    "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
