--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@kichiyaki/react-native-barcode-generator": "^0.6.7",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/drawer": "^6.6.14",
     "@react-navigation/native": "^6.1.15",
@@ -25,13 +26,16 @@
     "react-native-barcode-generator": "^0.3.1",
     "react-native-bluetooth-escpos-printer": "^0.0.5",
     "react-native-draggable": "^3.3.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-permissions": "^4.1.4",
     "react-native-qrcode-svg": "^6.3.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-share": "^10.1.0",
     "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
