--- a/eas.json
+++ b/eas.json
@@ -1,18 +1,14 @@
 {
-  "cli": {
-    "version": ">= 7.5.0"
-  },
   "build": {
     "development": {
       "developmentClient": true,
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal"
+      "android": {
+        "buildType": "apk"
+      }
     },
-    "production": {}
-  },
-  "submit": {
     "production": {}
   }
 }
