--- a/package.json
+++ b/package.json
@@ -6,22 +6,24 @@
     "start": "expo start -c",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@kichiyaki/react-native-barcode-generator": "^0.6.7",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/drawer": "^6.6.14",
     "@react-navigation/native": "^6.1.15",
     "@react-navigation/native-stack": "^6.9.24",
     "@react-navigation/stack": "^6.3.27",
     "axios": "^1.6.7",
-    "expo": "~50.0.11",
+    "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.6",
     "react-native-barcode-builder": "^2.0.0",
     "react-native-barcode-generator": "^0.3.1",
     "react-native-bluetooth-escpos-printer": "^0.0.5",
