--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -145,6 +145,7 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     implementation project(':react-native-bluetooth-escpos-printer')
+    implementation project(':react-native-view-shot')
 
     def isGifEnabled = (findProperty('expo.gif.enabled') ?: "") == "true";
     def isWebpEnabled = (findProperty('expo.webp.enabled') ?: "") == "true";
