--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "react-native-draggable": "^3.3.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-html-to-pdf": "^0.12.0",
     "react-native-permissions": "^4.1.4",
     "react-native-qrcode-svg": "^6.3.0",
     "react-native-reanimated": "~3.6.2",
@@ -38,7 +37,8 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-share": "^10.1.0",
-    "react-native-svg": "^14.1.0"
+    "react-native-svg": "^14.1.0",
+    "react-native-view-shot": "3.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
